Добавлена фукциональность, связанная с передачей контекстных переменных из вьюхи (временно)

--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 
 <p><a href="{% url index %}">МО</a>|
-    <a href="">ЛПУ</a>|
+    <a href="{% url lpu %}">ЛПУ</a>|
     <a href="">Подразделение</a>|
     <a href="">Специализация</a>|
     <a href="">Врач</a>|
