--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 
 <p><a href="{% url index %}">МО</a>|
-    <a href="{% url lpu %}">ЛПУ</a>|
+    <a href="{% url lpu okato='0000000000' %}">ЛПУ</a>|
     <a href="">Подразделение</a>|
     <a href="">Специализация</a>|
     <a href="">Врач</a>|
