--- a/ElReg/elreg_app/templates/lpu.html
+++ b/ElReg/elreg_app/templates/lpu.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <p>{{ x }}</p>
+    <p>{{ current_region }}</p>
     <ul>
         {% for hospital in hospitals_list %}
             <li><a href="/podrazdelenie/{{ hospital.uid|slice:":2"|cut:"/" }}/">{{ hospital.title }}</a></li>
