--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -7,12 +7,8 @@
 <p>E-Mail: {{ current_lpu.email }}</p>
 
 <ul>
-    {% for podrazdelenie in podrazdelenie_list %}
-        <li><a href="/specializaciya/">{{ podrazdelenie }} ({{ podrazdelenie.address }})</a></li>
-    {% endfor %}
-
-    {% for f in new_list %}
-        {{ f }}
+    {% for n in new %}
+        <li><a href="/specializaciya/{{ n.1 }}">{{ n.0 }} ({{ n.0.address }})</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
