Временно проставлены номера шагов для удобства

--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -1,13 +1,13 @@
 <html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
-<p><a href="{% url index %}">МО</a>|
-    <a href="{% url lpu okato='0' %}">ЛПУ</a>|
-    <a href="{% url podrazdelenie podrazd='0' %}">Подразделение</a>|
-    <a href="{% url specializaciya spec='0' %}">Специализация</a>|
-    <a href="{% url vrach %}">Врач</a>|
-    <a href="">Время</a>|
-    <a href="">Пациент</a>|
-    <a href="">Запись</a></p>
+<p><a href="{% url index %}">1.МО</a>|
+    <a href="{% url lpu okato='0' %}">2.ЛПУ</a>|
+    <a href="{% url podrazdelenie podrazd='0' %}">3.Подразделение</a>|
+    <a href="{% url specializaciya spec='0' %}">4.Специализация</a>|
+    <a href="{% url vrach %}">5.Врач</a>|
+    <a href="">6.Время</a>|
+    <a href="">7.Пациент</a>|
+    <a href="">8.Запись</a></p>
 
 
 <b>ШАГ - {{ step }}</b>
