Добавлена ссылка "Назад"

--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -11,4 +11,6 @@
         <li><a href="/specializaciya/{{ n.1 }}">{{ n.0 }} ({{ n.0.address }})</a></li>
     {% endfor %}
 </ul>
+
+<p><a href="{% url lpu okato='0' %}">Назад</a></p>
 {% endblock %}
