Добавлена кнопка "Назад"

--- a/ElReg/elreg_app/templates/specializaciya.html
+++ b/ElReg/elreg_app/templates/specializaciya.html
@@ -10,4 +10,6 @@
         <li><a href="/vrach?prof={{ s }}">{{ s }}</a></li>
     {% endfor %}
 </ul>
+
+<p><a href="{% url podrazdelenie podrazd='0' %}">Назад</a></p>
 {% endblock %}
