--- a/ElReg/elreg_app/templates/pacient.html
+++ b/ElReg/elreg_app/templates/pacient.html
@@ -7,6 +7,43 @@
 <p>{{ prof }}</p>
 <p>{{ docName.0 }} {{ docName.1 }} {{ docName.2 }}</p>
 
+<p><b>{{ date }} {{ start_time }} - {{ finish_time }}</b></p>
+
+
+
+<form id="form" action="" method="post" name="frm">
+    <fieldset>
+        <div class="field">
+            <label for="lastName">Фамилия:</label>
+            <input type="text" name="lastName" id="lastName" value="" maxlength="40" size="30" autocomplete="off" />
+        </div>
+
+        <div class="field">
+            <label for="firstName">Имя:</label>
+            <input type="text" name="firstName" id="firstName" value="" maxlength="40" size="30" autocomplete="off" />
+        </div>
+
+        <div class="field">
+            <label for="patronymic">Отчество:</label>
+            <input type="text" name="patronymic" id="patronymic" value="" maxlength="40" size="30" autocomplete="off" />
+        </div>
+
+        <div class="field">
+            <label for="dd">Дата рождения:</label>
+            <input type="text" name="dd" id="dd" value="" maxlength="2" size="2" autocomplete="off" />
+            <input type="text" name="mm" id="mm" value="" maxlength="2" size="2" autocomplete="off" />
+            <input type="text" name="yy" id="yy" value="" maxlength="4" size="4" autocomplete="off" />
+        </div>
+
+        <div class="field">
+            <label for="police">Серия и номер полиса:</label>
+            <input type="text" name="police" id="police" value="" maxlength="20" size="15" autocomplete="off" />
+        </div>
+    </fieldset>
+
+    <input type="submit" id="button-submit" value="Подтвердить" />
+</form>
+
 
 <p><a href="">Назад</a></p>
 {% endblock %}
