--- a/ElReg/elreg_app/templates/specializaciya.html
+++ b/ElReg/elreg_app/templates/specializaciya.html
@@ -11,5 +11,5 @@
     {% endfor %}
 </ul>
 
-<p><a href="{% url podrazdelenie podrazd='0' %}">Назад</a></p>
+<p><a href="{% url podrazdelenie %}">Назад</a></p>
 {% endblock %}
