Исправлена ссылка Назад в сторону упрощения. Переименованы переменные для наглядного восприятия контента

--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -5,12 +5,16 @@
 <p><b>ЛПУ: {{ current_lpu.title }}</b></p>
 <p>Телефон: {{ current_lpu.phone }}</p>
 <p>E-Mail: {{ current_lpu.email }}</p>
-
-<ul>
-    {% for n in new %}
-        <li><a href="/specializaciya/{{ n.1 }}">{{ n.0 }} ({{ n.0.address }})</a></li>
-    {% endfor %}
-</ul>
-
-<p><a href="{% url lpu okato='0' %}">Назад</a></p>
+<p>
+    <ul>
+        {% for podrazdelenie in podrazd_list %}
+        <li>
+            <a href="/specializaciya/{{ podrazdelenie.1 }}">
+                {{ podrazdelenie.0 }} ({{ podrazdelenie.0.address }})
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</p>
+<p><a href="{% url lpu %}">Назад</a></p>
 {% endblock %}
