Добавлен вывод шапки страницы

--- a/ElReg/elreg_app/templates/zapis.html
+++ b/ElReg/elreg_app/templates/zapis.html
@@ -3,7 +3,11 @@
 
 {% block content %}
 
+<p>{{ current_podrazd }}</p>
+<p>{{ prof }}</p>
+<p>{{ docName }}</p>
 
+<p><b>{{ date }} {{ start_time }} - {{ finish_time }}</b></p>
 
 
 {% endblock %}
