Адрес ссылок списка подразделений сделан более динамичным

--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -9,7 +9,7 @@
     <ul>
         {% for podrazdelenie in podrazd_list %}
         <li>
-            <a href="/specializaciya/{{ podrazdelenie.1 }}">
+            <a href="{% url specializaciya %}{{ podrazdelenie.1 }}">
                 {{ podrazdelenie.0 }} ({{ podrazdelenie.0.address }})
             </a>
         </li>
