--- a/ElReg/elreg_app/templates/vrach.html
+++ b/ElReg/elreg_app/templates/vrach.html
@@ -8,9 +8,9 @@
 
 <ul>
     {% for d in doc %}
-        <li><a href="/vremya/{{ d.uid }}">{{ d.name.lastName }} {{ d.name.firstName }} {{ d.name.patronymic }}</a></li>
+        <li><a href="{% url vremya %}{{ d.uid }}">{{ d.name.lastName }} {{ d.name.firstName }} {{ d.name.patronymic }}</a></li>
     {% endfor %}
 </ul>
 
-<p><a href="{% url specializaciya spec='0' %}">Назад</a></p>
+<p><a href="{% url specializaciya %}">Назад</a></p>
 {% endblock %}
