Убрана передача переменной в url-адресах

--- a/ElReg/elreg_app/templates/vremya.html
+++ b/ElReg/elreg_app/templates/vremya.html
@@ -7,7 +7,7 @@
 <p>{{ prof }}</p>
 <p>{{ docName }}</p>
 
-<p><a href="{% url vremya vremya='prev' %}">Предудущая</a> - <a href="{% url vremya vremya='next' %}">Следующая</a></p>
+<p><a href="{% url vremya %}prev/">Предудущая</a> - <a href="{% url vremya %}next/">Следующая</a></p>
 
 {% if ticketTable %}
 
