--- a/ElReg/elreg_app/templates/pacient.html
+++ b/ElReg/elreg_app/templates/pacient.html
@@ -3,6 +3,9 @@
 
 {% block content %}
 
+<script type="text/javascript" language="javascript"
+        src="{{ STATIC_URL }}/static/js/pacient_page.js"></script>
+
 <p>{{ current_podrazd }}</p>
 <p>{{ prof }}</p>
 <p>{{ docName }}</p>
@@ -20,11 +23,11 @@
     </font>
 </p>
 
-{% if ticket_err %}
-    <font color="red"><p>{{ ticket_err }}</p></font>
+{% if ticketPatient_err %}
+    <font color="red"><p>{{ ticketPatient_err }}</p></font>
 {% endif %}
 
-<form id="form" action="" method="post" name="frm">
+<form id="pacient_form" action="" method="post" name="frm">
     <fieldset>
         <div class="field">
             <label for="lastName">Фамилия:</label>
@@ -57,13 +60,18 @@
         <div class="field">
             <label for="policy1">Серия и номер полиса:</label>
             <input type="text" name="policy1" id="policy1" value="{{ policy1 }}" maxlength="10" size="2" autocomplete="on" />
-            <input type="text" name="policy2" id="policy2" value="{{ policy2 }}" maxlength="20" size="15" autocomplete="on" />
+            <input type="text" name="policy2" id="policy2" value="{{ policy2 }}" maxlength="16" size="16" autocomplete="on" />
+        </div>
+
+        <div class="field">
+            <input id="chb" value="0" type="checkbox" /> - отправить информацию о записи на электронный адрес
         </div>
 
         <div class="field">
             <label for="email">E-mail:</label>
-            <input type="text" name="email" id="email" value="{{ email }}" maxlength="30" size="30" autocomplete="on" />
+            <input type="text" name="email" id="email" value="{{ email }}" maxlength="50" size="35" disabled="disabled" autocomplete="on" />
         </div>
+        * - поля, обязательные для заполнения
     </fieldset>
 
     <input type="submit" id="button-submit" value="Подтвердить" />
