--- a/ElReg/elreg_app/templates/zapis.html
+++ b/ElReg/elreg_app/templates/zapis.html
@@ -3,22 +3,26 @@
 
 {% block content %}
 
-<fieldset>
-<p>Номер талончика: <b>{{ ticketStatus.ticketUid }}</b></p>
-<p>Лечебное учреждение: {{ current_lpu_title }}</p>
-<p>Специализация: {{ prof }}</p>
-<p>Врач: {{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }}</p>
-<p>Дата и время приёма: <b>{{ date }} {{ start_time }} - {{ finish_time }}</b></p>
-<p>Пациент: </p>
-</fieldset>
+{% comment %}<p>Номер талончика: {{ ticketStatus.ticketUid }}</p>{% endcomment %}
+
+<table align="center">
+    <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ</th></tr>
+    <tr><td>ФИО (Пациент):</td><td colspan="2">{{ pacientName }}</td></tr>
+    <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }}</td></tr>
+    <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
+    <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
+    <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}</td></tr>
+    <tr><td>Врач:</td><td colspan="2">{{ ticketStatus.doctor.lastName }} {{ ticketStatus.doctor.firstName }} {{ ticketStatus.doctor.patronymic }} ({{ prof }})</td></tr>
+    <tr><td>Дата и время приёма:</td><td colspan="2">{{ date }} {{ start_time }} - {{ finish_time }}</td></tr>
+    <tr><th colspan="3">ВНИМАНИЕ:</th></tr>
+    <tr><td colspan="3">Заметка 1</td></tr>
+    <tr><td colspan="3">Заметка 2</td></tr>
+    <tr><td colspan="3">Заметка 3</td></tr>
+</table>
 <br />
-<div class="no_print">
-<form id="form" action="" method="post" name="frm">
-<fieldset>
-    <input type="checkbox" name="option1" value="mail"> - E-mail<br />
-    <input type="checkbox" name="option2" value="print" checked> - <a href="" onClick="window.print();">Печать</a>
-    <br />
-</fieldset>
+<div class="no_print" align="center">
+<form id="form" action="/" method="post" name="frm">
+    <input type="button" onClick="window.print();" name="btnPrint" value="Печать" title="Распечатать  уведомление о записи на приём" />
     <input type="submit" id="button-ready" value="Готово" />
 </form>
 </div>
