--- a/ElReg/elreg_app/templates/podrazdelenie.html
+++ b/ElReg/elreg_app/templates/podrazdelenie.html
@@ -2,6 +2,8 @@
 
 
 {% block content %}
+<script src="{{ STATIC_URL }}/static/js/updates.js" type="text/javascript"></script>
+
 <p><b>ЛПУ: {{ current_lpu.title }}</b></p>
 <p>Телефон: {{ current_lpu.phone }}</p>
 <p>E-Mail: {{ current_lpu.email }}</p>
@@ -16,5 +18,12 @@
         {% endfor %}
     </ul>
 </p>
-<p><a href="{% url lpu %}">Назад</a></p>
+<div id="ttt">
+    <p><a href="{% url lpu %}">Назад</a></p>
+</div>
+
+<div class="r">
+    <a id="rrr">R</a>
+</div>
+
 {% endblock %}
